--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "api": "^5.0.8",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "framer-motion": "^10.12.11",
     "fsevents": "^2.3.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
