--- a/package.json
+++ b/package.json
@@ -1,3 +1,79 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:bb6efe48d84fd83a12f7f280f43576ab092674a5b7f56197bff5bfbcacdbb969
-size 1626
+{
+  "name": "tabpage",
+  "author": {
+    "name": "Reed Vogt",
+    "email": "reedvogt1999@gmail.com",
+    "url": "http://your-website.com"
+  },
+  "description": "My work tab page application",
+  "license": "MIT",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": ".",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/reedoooo/tabpage"
+  },
+  "bugs": {
+    "url": "https://github.com/reedoooo/tabpage/issues"
+  },
+  "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.7.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "api": "^5.0.8",
+    "axios": "^1.4.0",
+    "dotenv": "^16.1.4",
+    "framer-motion": "^10.12.16",
+    "fsevents": "^2.3.2",
+    "jwt-decode": "^3.1.2",
+    "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-cookies": "^0.1.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.1",
+    "react-scripts": "^5.0.1",
+    "react-spring": "^9.7.1",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.153.0",
+    "three-orbitcontrols": "^2.110.3",
+    "use-debounce": "^9.0.4",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.0"
+  }
+}
