--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": {
     "name": "Reed Vogt",
     "email": "reedvogt1999@gmail.com",
-    "url": "http://your-website.com"
+    "url": "https://myportfolio-showcase.netlify.app/"
   },
   "description": "My work tab page application",
   "license": "MIT",
