--- a/package.json
+++ b/package.json
@@ -70,9 +70,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "eslint": "^8.44.0",
+    "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.0"
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-config-react-app": "^7.0.1",
+    "prettier": "^2.3.2"
   }
 }
