--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,31 +14,15 @@
   "globals": {
     "fail": true
   },
-  "parser": "@typescript-eslint/parser",
+  "parser": "babel-eslint",
   "parserOptions": {
     "sourceType": "module",
     "ecmaVersion": 2018
   },
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["prettier"],
   "rules": {
     "no-console": "off",
     "indent": ["error", 2],
-    "@typescript-eslint/indent": [
-      "error",
-      2,
-      {
-        "CallExpression": {
-          "arguments": "first"
-        },
-        "FunctionDeclaration": {
-          "parameters": "first"
-        },
-        "FunctionExpression": {
-          "parameters": "first"
-        },
-        "offsetTernaryExpressions": true
-      }
-    ],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single", { "avoidEscape": true }],
     "semi": ["error", "always"],
