--- a/package.json
+++ b/package.json
@@ -69,9 +69,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.22.9",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.22.9",
     "@typescript-eslint/parser": "^5.62.0",
-    "babel-eslint": "^10.1.0",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-config-react-app": "^7.0.1",
