--- a/.github/worfklows/main.yml
+++ b/.github/worfklows/main.yml
@@ -1,103 +1,28 @@
-# tabPage
+name: CI
 
-TabPage is a versatile productivity application, designed to merge a multitude of utilities into a singular interface. It offers a seamless experience, allowing users to add various tools to their productivity homepage, including a calculator, stock watcher, weather news, and more. Ideal for individuals seeking swift, uninterrupted access to numerous tools throughout their day, TabPage is your personal digital hub.
+on: [push, pull_request]
 
-[![Netlify Status](https://api.netlify.com/api/v1/badges/e8e2c7c0-4d8c-48f7-b865-df70276dbf97/deploy-status)](https://app.netlify.com/sites/tabpage/deploys)
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-## 📌 Table of Contents
-
-- [Overview](#overview)
-- [Motivation](#motivation)
-- [Getting Started](#getting-started)
-  - [Prerequisites](#prerequisites)
-  - [Installation](#installation)
-- [Usage](#usage)
-- [Running the tests](#running-the-tests)
-- [Deployment](#deployment)
-- [Built With](#built-with)
-- [Contributing](#contributing)
-- [Authors](#authors)
-- [License](#license)
-- [Acknowledgments](#acknowledgments)
-- [Contact](#contact)
-
-## 💡 Overview
-
-TabPage is more than a bookmark manager - it's a comprehensive productivity platform. It provides numerous features for organizing, planning, and controlling your digital life. With the inclusion of note-taking, to-do lists, and a dedicated ChatGPT prompt window, you can stay on top of all your tasks and needs.
-
-## 🚀 Motivation
-
-TabPage was conceived to enhance productivity and organization for individuals. It meets the need for swift and handy access to regularly utilized sites and tools, all from a single interface.
-
-## 🏁 Getting Started
-
-### Prerequisites
-
-You will need to have these components installed on your machine to use this project:
-
-1. **Node.js and npm**: Visit the [official Node.js website](https://nodejs.org) to get the Node.js npm installation package.
-2. **Create React App**: You can install it globally using the command `npm install -g create-react-app`.
-3. **Chakra UI**: Install it in your project using the command `npm i @chakra-ui/react @emotion/react @emotion/styled framer-motion`.
-4. **MongoDB**: Create an account on the [official MongoDB website](https://www.mongodb.com/) and set up a new cluster.
-
-### Installation
-
-Follow these steps to get a copy of the project up and running on your local machine:
-
-1. Clone the repository using `git clone https://github.com/reedoooo/tabpage.git`.
-2. Navigate into the project directory using `cd tabPage`.
-3. Run `npm install` to install all necessary dependencies.
-4. Ensure your local file structure matches the structure used in this project.
-5. Configure your MongoDB database and establish a connection with the application.
-
-## 🎮 Usage
-
-TabPage offers a user-friendly and intuitive interface:
-
-1. Add your most frequently visited sites on your homepage for quick access.
-2. Enable various tools such as a calculator, stock watcher, weather news, and more.
-3. Keep your tasks under control with the built-in to-do list.
-4. Use the note-taking section for critical reminders.
-5. Leverage the ChatGPT prompt window for various purposes.
-
-## 🧪 Running the tests
-
-To execute the tests for this application, use the command `npm test`.
-
-## 🚀 Deployment
-
-For a detailed guide on how to deploy this application using services like Render and Netlify, please use ChatGPT with the prompt 'how to deploy an app using render and netlify'.
-
-## 🛠️ Built With
-
-TabPage is powered by several prominent frameworks:
-
-- [React](https://react.dev/)
-- [Chakra UI](https://chakra-ui.com/)
-- [MongoDB](https://www.mongodb.com/)
-
-## 🤝 Contributing
-
-Please refer to the [CONTRIBUTING.md](link_to_contributing_guide) file for information about our code of conduct and the process for submitting pull requests.
-
-## 👥 Authors
-
-- **Reed Vogt** - [reedoooo](https://github.com/reedoooo)
-
-For a list of individuals who have contributed to this project, please refer to the [contributors](link_to_contributors) link.
-
-## 📝 License
-
-This project is licensed under the MIT License - see the [LICENSE.md](link_to_license) file for details.
-
-## 🎉 Acknowledgments
-
-I express my sincere gratitude to CodeFellows for providing me with a strong foundation in coding.
-
-## 📫 Contact
-
-For any inquiries or collaborations, feel free to reach out via email:
-
-- Reed Vogt: <reedvogt1999@gmail.com>
-
-You can also explore the project further at: [https://github.com/reedoooo/tabpage](https://github.com/reedoooo/tabpage)
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-node-
+      - name: Install Dependencies
+        run: npm ci
+      - name: Build
+        run: npm run build
+      - name: Test
+        run: npm run test -- --watchAll=false
