--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.1.4",
     "framer-motion": "^10.12.16",
     "jwt-decode": "^3.1.2",
+    "prettier-eslint": "^15.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-cookies": "^0.1.1",
