--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,7 @@
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single", { "avoidEscape": true }],
     "semi": ["error", "always"],
-    "no-unused-vars": [1, { "vars": "local", "args": "none" }],
+    "no-unused-vars": "off",
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "prettier/prettier": [
