--- a/.github/worfklows/main.yml
+++ b/.github/worfklows/main.yml
@@ -3,45 +3,64 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  build:
+  build_and_test:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 14
+
       - name: Cache Node.js modules
         uses: actions/cache@v2
         with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
           path: ~/.npm
           key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.OS }}-node-
+
       - name: Install Dependencies
         run: npm ci
+
       - name: Build
         run: npm run build
+
       - name: Test
         run: npm run test -- --watchAll=false
 
   screenshots:
+    needs: build_and_test
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
+
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14
+
+    - name: Install Dependencies
+      run: npm ci
+
     - name: install puppeteer-headful
       uses: mujo-code/puppeteer-headful@master
       env:
         CI: 'true'
+
     - name: screenshots-ci-action
       uses: flameddd/screenshots-ci-action@master
       with:
-        url: https://yourwebsite.com
-        devices: iPhone 6
-        fullPage: true
-    - uses: actions/upload-artifact@v2
+        url: 'http://localhost:3000'
+        devices: 'iPhone 6'
+        fullPage: 'true'
+        preScript: 'npm run start'
+
+    - name: Upload screenshot
+      uses: actions/upload-artifact@v2
       with:
+        name: screenshots
         path: screenshots
-        name: Download-screenshots
