--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,41 +9,35 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
     "prettier"
   ],
   "globals": {
     "fail": true
   },
-  "parser": "@typescript-eslint/parser",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 2018,
     "sourceType": "module",
-    "ecmaVersion": 2018
+    "requireConfigFile": false
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
     "no-console": "off",
-    "indent": ["warn", 2],
-    "@typescript-eslint/indent": [
-      "warn",
-      2,
-      {
-          "CallExpression": {
-              "arguments": "first"
-          },
-          "FunctionDeclaration": {
-              "parameters": "first"
-          },
-          "FunctionExpression": {
-              "parameters": "first"
-          },
-          "offsetTernaryExpressions": true
-      }
-  ],
+    "indent": "off",
+    "@typescript-eslint/indent": "off",
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single", { "avoidEscape": true }],
     "semi": ["error", "always"],
-    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      1,
+      { "vars": "local", "args": "none" }
+    ],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "prettier/prettier": [
