--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/reedoooo/tabpage/issues"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.1",
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.0",
@@ -33,6 +34,7 @@
     "prettier-eslint": "^15.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-cookie": "^6.1.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
