--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
     "sourceType": "module",
     "requireConfigFile": false
   },
-  "plugins": ["react", "@typescript-eslint", "prettier"],
+  "plugins": ["react", "@typescript-eslint", "prettier", "@emotion"],
   "rules": {
     "no-console": "off",
     "indent": "off",
