--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@auth0/auth0-react": "^2.2.1",
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.7.0",
+    "@emotion/eslint-plugin": "^11.11.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -92,6 +93,7 @@
     "eslint-config-google": "0.14.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-emotion": "^11.0.0",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.33.2",
     "mini-css-extract-plugin": "^2.7.6",
